--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -5,148 +5,6 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [
-        "H0kj-8xxnORC",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
-        "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
-        "-JiQyfWJYklI",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
-        "iky9q4vBYrdO",
-        "F6T5p64dYrdO",
-        "y-Ehk30pYrdP",
-        "bamQiAODYuh1",
-        "QHF8YVU7Yuh3",
-        "GwzvFGzlYuh3",
-        "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
-        "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
-        "Seke61FWphqN",
-        "PIIx-8_IphqN",
-        "t27r6nlMphqO",
-        "r2jJGEOYphqO",
-        "b0JNsNcRphqO",
-        "BZR9WyysphqO",
-        "jj7wYXLtphqO",
-        "eZrbJ2SmphqO",
-        "rFu4xreNphqO",
-        "YJ55k-q6phqO",
-        "gCFgpxoyphqP",
-        "OVtJsKN_phqQ",
-        "lssrdh5qphqQ",
-        "U2RJ9gkRphqQ",
-        "1M8mcRywphqQ",
-        "tgIPom80phqQ",
-        "JMzcOPDDphqR",
-        "x-EpHcCOp1ci",
-        "X_VqEhTip1ck",
-        "8zGJKyg5p1ck",
-        "PVzmfK_Ep1ck",
-        "n3dbpmDWp1ck",
-        "ylSl6qgtp1ck",
-        "ZWILFDl5p1ck",
-        "M7G43BXep1ck",
-        "Ag9LCva-p1cl",
-        "E6MkPsBcp1cl",
-        "2cELzS2fp1cl",
-        "3MPXvC8up1cl",
-        "NC_X3p0fY2L0",
-        "UV0SzAkaZNRQ",
-        "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
-        "EXh0U9oCveiU",
-        "22aHeOlLveiV",
-        "g-ATYxFrGrvw",
-        "Yfr_Vlr8HBkt",
-        "8yEUt7NnHlrM",
-        "tEA2Xm5dHt1r",
-        "I79__PHVH19G",
-        "Ou-I18pAyIpj",
-        "fF3858GYyt-u",
-        "4_0_7-oCpUZd",
-        "hwyV_J3ipUZe",
-        "3yB-zSqbpUZe",
-        "dEUvejAfpUZe",
-        "Fd15vwWVpUZf",
-        "bn_IUdTipZyH",
-        "49K5P_iCpZyH",
-        "Nff-vKELpZyI",
-        "kLW572S8pZyI",
-        "dWbDXHzopZyI",
-        "yLjJCtPM0KBk",
-        "xiyOF9F70UgQ",
-        "7wuGOrhz0itI",
-        "id1riN9m0vUs",
-        "578E2V7j08f6",
-        "89xtkJwZ18nB",
-        "67NQN5KX2AMe",
-        "Iwf50b-R2tYG",
-        "GMQiZwjn3iu7",
-        "WVIkgGqN3qsr",
-        "XkPnILGE3zoT",
-        "Hlsf0x5436Go",
-        "mT9DMSJo4nBL",
-        "c49ITxTc407N",
-        "OeJFEK0N496M",
-        "9ExmJH0g5HBk",
-        "cJNqERVU536h",
-        "k5UmGsbsOxih",
-        "T0VqWOYE6DLQ",
-        "qBMux9mC6MCf",
-        "-oLEiFgy-5Pf",
-        "C74aWNz2AliB",
-        "2DejudWSA-a0",
-        "pEMng2IbBLp7",
-        "rAdphbQ9Bhjc",
-        "TNVZ9zx19K6k",
-        "nqoHp30x9hH9",
-        "rMDnDkt2B6du",
-        "yiiVWRdJDDil",
-        "1UUpS68QDMuG",
-        "kexQrXU-DjzY",
-        "T5CmagL3EC8N",
-        "BhH2vgX9EjGr",
-        "qjKvONjwE8ra",
-        "P1XJ9OREExlT",
-        "VFOzZv6IFROw",
-        "TIqpNgepFxVj",
-        "VfCC591jGiD4",
-        "OB4l2ZhMeS1U",
-        "ArJBuiUVfxKd",
-        "4qY1EAkEfxKe",
-        "PiV4Ypx8fxKe",
-        "TfvqoZmBfxKf",
-        "dJ2tPlVmpsJ0",
-        "JWYfwnehpsJ1",
-        "-jK_YjpMpsJ2",
-        "HAih1iBOpsJ2",
-        "zVGeBEFhpsJ2",
-        "bmKjuQ-FpsJ3",
-        "Fze-IPXLpx6K",
-        "7AN1z2sKpx6M",
-        "9PIHJqyupx6M",
-        "_-qAgymDpx6N",
-        "Z-hykwinpx6N",
-        "h_CCil-SKHpo",
-        "cBFFvTBNJzUa",
-        "HvGl1hHyA_VK",
-        "EyNgTHvd2WFk",
-        "KH5McJBi2d8v",
-        "iW_Lq9qf2h6X",
-        "-Kee-DAl2viO",
-        "gCX9965dhzqZ",
-        "gIfDvo9L0UH2"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -201,7 +59,59 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        " As, we know Yes Bank is a well known Bank, here we have done stock closing price Prediction. First of all for doing this Regression Project we have imported all the necessary libraries which are used for doing this project. first of all we have mounted our drive so, that we can load our dataset. Our dataset contains 185 rows and 5 columns. The dataset contains following features:\n",
+        "\n",
+        "\n",
+        "*   **Date** : It denotes the month & year with respect to the price of the stock.\n",
+        "*   **Open** : It denotes the opening price at which a stock started trading that month.\n",
+        "\n",
+        "*   **High** : It denotes the highest price at which a stock traded during a period.\n",
+        "*   **Low** : It denotes the highest price at which a stock traded during a period.\n",
+        "\n",
+        "*   **Close** : It denotes the final trading price for that month.\n",
+        "\n",
+        "After that I started data cleaning process and it was done following processes:\n",
+        "\n",
+        "\n",
+        "*   At first I found that there no any null value and missing which means it is a good dataset to work on.\n",
+        "*   Then I found that Date is not in proper 'YYYY-MM-DD' format so, I converted that column in proper format using datetime.strptime() function.\n",
+        "\n",
+        "Now our dataset cleaned and I diveded into Independent(Open, High, Low) and Dependent(Close) variables. Now I did EDA to the relation between Independent Variable and Dependent Variable. The EDA was done on following Variables:\n",
+        "\n",
+        "\n",
+        "*   At first I did Univariate Analysis in which I found relation between one vs one variable. Fist I found Plot of dependent variable using line graph  here, I found that stock prices fell after 2018 Rana Kapoor fraud case. Then after applying distplot on dependent variable I found it to positive skewed. Then I plotted histogram and mean and median on close variable I found there is a lot difference between Mean and Median so, to make it normal distribution I did Log Transformation. After applying Log Transformation here we can see our dependent variable is normally distributed and difference between Mean & Median almost got finished.\n",
+        "*   Now , I did Univariate Analysis of Independent variable(Open, High & Low). Here after plotting distplot I found all these features to be positively skewed. And adter plotting histogram plot I found that mean & meadian has lot of difference between them. Then after applying Log Transformation the distribution became normally distributed and difference mean and median almost got finished.\n",
+        "\n",
+        "*   After that I did Biavariate Analysis and I found relation between Dependent and Independent Variable. After plotting Scatter plot and Correlation Heatmap it is found that all independent variable has high relation with dependent variable so, no column could be dropped in modelling.\n",
+        "\n",
+        "Afetr that I applied train_test_split() on our data and divided our data into training data and testing data. Training data constitutes of 80% of our dataset and training data constitutes of 20% of our dataset.\n",
+        "Now we are ready to make our Regression model.\n",
+        "\n",
+        "Then I applied regression model on our dependent and Independent in which we pedict dependent variable Y with respect to independent variable X  , and the different models  are:\n",
+        "\n",
+        "\n",
+        "*   At first I applied Linear Regression, here I found that it 82% of testing accuracy , but accuracy s not good metric to find whether the model is good or not. So, I found different metrics such as MSE, RMSE, MAE, MAPE and r2. Here, for better model MAE, RMSE, MAE, MAPE should be as low near to 0 and r2 should high near to 1. Here in Linear Regression model r2 is not much close to 1 and by looking the plotting we can see that our model is not good as much it is looking so, we apply Regularization technique on it.\n",
+        "*   Then I applied Lasso Regularization technique which would make our model more accurate then after applying Lasso Regression there is no any subsequent change in accuracy and r2 of the model so, then I applied Cross validation techneque but then also here no no any good change in our model.\n",
+        "\n",
+        "*   After that I applied Ridge Regualarization technique, I found that there is only a little change in the model accuracy , then after applying cross validation technique there is not enough change in the model. After looking at our plotting now we need apply garadient boosting technique.\n",
+        "*   One of the gradient boosting technique is XG Boost Regression which is a ensembling technique. Here, I applied XG Boost Regressor on our training dataset, here it is found that XG Boost Regression has almost 99% accuracy is a very good productive model. Here we can see that all the metrics are MSE, RMSE, MAE, MAPE are very less which means it is a very good predictive model. And in this model r2 is 0.98 which is close to 1 , the model whose r2 is near to 1 is good model.\n",
+        "\n",
+        "Here, after applying all the Regression model , XG Boost Regression model is best among all.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -677,7 +587,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Here we can clearly see that distribution is right skewed so we have to do transformatiom to make it Normal using log transformation method.\n",
+        "Here we can clearly see that distribution is positivily skewed so we have to do transformatiom to make it Normal using log transformation method.\n",
         "Log Transfomation is used when our data is highly skewed.\n",
         "\n"
       ],
@@ -733,7 +643,7 @@
       "source": [
         "Here red dashed line shows Mean of our target variable and green dashed line shows Median of our target variable.\n",
         "\n",
-        "Here there is lot of difference between our Mean and Median so we have to do Lof tranformation to reduce such a variance between our central tendency."
+        "Here there is lot of difference between our Mean and Median so we have to do Log tranformation to reduce such a variance between our central tendency."
       ],
       "metadata": {
         "id": "LmGTQI3upzY0"
@@ -1972,19 +1882,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the conclusion here."
+        "\n",
+        "\n",
+        "*   The Closing Stock price of Yes bank started increasing froom 2009 to 2018.\n",
+        "*   After Rana Kapoor fraud case in 2018 stock price fell sharply.\n",
+        "*   Here  all indipendent variables are highly correlated with dependent variable.\n",
+        "*   All indepependent and dependent variables were right skewed , after applying log transformation it became normally distributed.\n",
+        "*   After applying Linear Regression, Lasso Regression, Ridge Regression and XG Boost Regression , XG Boost was the best model we have seen.\n",
+        "*   XG Boost was best because MSE,RMSE,MAE,MAPE are lowest among all the regression model and r2 is highest among all the regression model.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### ***Hurrah! You have successfully completed your Machine Learning Capstone Project !!!***"
-      ],
-      "metadata": {
-        "id": "gIfDvo9L0UH2"
       }
     }
   ]
