--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -129,7 +129,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/Faraz-Khan02/Yes-Bank-Stock-Closing-Price-Prediction/blob/main/Yes_Bank_Stock_Closing_Price_Prediction.ipynb"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -1884,12 +1884,12 @@
       "source": [
         "\n",
         "\n",
-        "*   The Closing Stock price of Yes bank started increasing froom 2009 to 2018.\n",
+        "*   The Closing Stock price of Yes bank started increasing from 2009 to 2018.\n",
         "*   After Rana Kapoor fraud case in 2018 stock price fell sharply.\n",
         "*   Here  all indipendent variables are highly correlated with dependent variable.\n",
-        "*   All indepependent and dependent variables were right skewed , after applying log transformation it became normally distributed.\n",
+        "*   All indepependent(Open, High, Low) and dependent(Close) variables were positively skewed ,and there was a subsequent difference between Mean & Median of all the variables after applying log transformation it became normally distributed.\n",
         "*   After applying Linear Regression, Lasso Regression, Ridge Regression and XG Boost Regression , XG Boost was the best model we have seen.\n",
-        "*   XG Boost was best because MSE,RMSE,MAE,MAPE are lowest among all the regression model and r2 is highest among all the regression model.\n",
+        "*   XG Boost was best because MSE,RMSE,MAE,MAPE were lowest among all the regression model and r2 is highest among all the regression model.\n",
         "\n",
         "\n",
         "\n",
